// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it supports editMode 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="makeStyles-headerContainer-1"
  >
    <div
      className="makeStyles-headerTitleContainer-5"
    >
      <div
        className=""
      >
        <h2
          className="MuiTypography-root makeStyles-headerTitle-6 MuiTypography-h2"
        >
          Update Tag type
        </h2>
      </div>
    </div>
  </div>
  <div
    className="makeStyles-bodyContainer-2"
  >
    <section
      className="contentSpacing tagTypeContainer"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle1"
      >
        Tag types allows you to group tags together in the management UI
      </h6>
      <form
        className="addTagTypeForm contentSpacing"
        onSubmit={[Function]}
      >
        <div
          className="formButtons"
        >
          <div>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="submit"
            >
              <span
                className="MuiButton-label"
              >
                <span
                  className="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <span
                    aria-hidden={true}
                    className="material-icons MuiIcon-root"
                  >
                    add
                  </span>
                </span>
                Update
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
             
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="cancel"
            >
              <span
                className="MuiButton-label"
              >
                Cancel
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </form>
    </section>
  </div>
</div>
`;

exports[`renders correctly for creating 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="makeStyles-headerContainer-1"
  >
    <div
      className="makeStyles-headerTitleContainer-5"
    >
      <div
        className=""
      >
        <h2
          className="MuiTypography-root makeStyles-headerTitle-6 MuiTypography-h2"
        >
          Create Tag type
        </h2>
      </div>
    </div>
  </div>
  <div
    className="makeStyles-bodyContainer-2"
  >
    <section
      className="contentSpacing tagTypeContainer"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle1"
      >
        Tag types allows you to group tags together in the management UI
      </h6>
      <form
        className="addTagTypeForm contentSpacing"
        onSubmit={[Function]}
      >
        <div
          className="formButtons"
        >
          <div>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="submit"
            >
              <span
                className="MuiButton-label"
              >
                <span
                  className="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <span
                    aria-hidden={true}
                    className="material-icons MuiIcon-root"
                  >
                    add
                  </span>
                </span>
                Create
              </span>
            </button>
             
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="cancel"
            >
              <span
                className="MuiButton-label"
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </section>
  </div>
</div>
`;
